fix z-index navbar

--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
     width: 100%;
     height: 120px;
     position: relative;
-    z-index: 10;
+    z-index: 1;
     box-shadow: 0 5px 5px rgba(0,0,0,.04);
     border-bottom: 1px solid #dee2e6;
 }
@@ -153,6 +153,7 @@ body {
     /* ------------- */
 
     .nav_bar {
+        z-index: 99;
         background: #17194C;
         position: fixed;
         top: 0;
